@@ -89,7 +89,7 @@ to mechanize.  Michele Simionato is an early adopter who has helped
 quite a bit.  Thanks, guys...</p>
 <p>Bug reports have come in from the following fine people: Chris Miles,
 MATSUNO Tokuhiro, Elvelind Grandin, Mike Rovner,  sureshvv,
-and Alexander Shvedunov.</p>
+Alexander Shvedunov, and Norman Khine.</p>
 <p>Patches have been submitted by Joeri van Ruth, Paul McGuire, Ed Rahn,
 Nic Ferrier, Robert Leftwich, James Cameron, William Volkman,
 Tommi Virtanen, Simon Buenzli, and sureshvv.  Thanks!</p>
