@@ -100,7 +100,7 @@ quite a bit.  Thanks, guys...
 
 Bug reports have come in from the following fine people: Chris Miles,
 MATSUNO Tokuhiro, Elvelind Grandin, Mike Rovner,  sureshvv,
-and Alexander Shvedunov.
+Alexander Shvedunov, and Norman Khine.
 
 Patches have been submitted by Joeri van Ruth, Paul McGuire, Ed Rahn,
 Nic Ferrier, Robert Leftwich, James Cameron, William Volkman,
